--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Default": "Data Source=Data/MyApp.db"
+  },
+  "AllowedHosts": "*"
 }
